components/card/card.css
/* Component variables */


/* Rest of styles for the component */
.card-container {
  width: 100%; /* Make the card take the full width of its container */
  display: flex;
  flex-direction: column;
  gap: 15px;
}

.card-image {
  width: 100%; /* Make the image take the full width of the card */ 
  height: auto; /* Maintain aspect ratio */
  border-radius: 8px;
  transition: filter 0.25s ease;
}

.card-image:hover {
  filter: brightness(1.1) saturate(1.1);
}

.card-title {
  display: flex;
  justify-content: center;
  color: var(--color-neutral-900);
}

.card-links {
  display: flex;
  justify-content: center;
  gap: 30px;
}

.card-links a {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: var(--clickable-area-padding); /* Increase clicka  le area for better UX */
  user-select: none;
  -webkit-tap-highlight-color: transparent; /* Remove mobile tap highlight */
}

.card-link-icon {
  width: 30px;
  height: 30px;
  fill: var(--color-neutral-900);
  transition: fill 0.2s ease;
}

/* Restrict hover to devices with hover capability and fine pointer */
@media (hover: hover) and (pointer: fine) {
  .card-links a:hover .card-link-icon {
    fill: var(--color-tertiary);
  }
}

